[package]

name = "capital_larceny"
version = "0.0.1"
authors = ["Miranda <mirandaseitzmcleese@gmail.com>", "Jarrett <jarrettcolby@gmail.com>"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies]
libc = "*"